fixed the wrapping text for the logo on the navbar

--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ button {
     min-width: 30%;
     padding: 10px 0 10px 20px;
     justify-content: space-between;
-    margin-left: 12%;
+    margin-left: 6%;
 }
 
 #searchbar input {
